# ennio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  USAGE.md  devbox.json  flake.nix
.github/workflows/: docker.yml  docs.yml
crates/ennio-cli/: Cargo.toml
crates/ennio-cli/src/: commands.rs  format.rs  main.rs
crates/ennio-core/: Cargo.toml
crates/ennio-core/proptest-regressions/: prompt.txt
crates/ennio-core/src/: agent.rs  config.rs  error.rs  event.rs  id.rs  lib.rs  lifecycle.rs  notifier.rs  paths.rs  plugin.rs  prompt.rs  reaction.rs  runtime.rs  scm.rs  serde_helpers.rs  session.rs  terminal.rs  tracker.rs  workspace.rs
crates/ennio-dashboard/: Cargo.toml
crates/ennio-dashboard/src/: lib.rs  main.rs  types.rs
crates/ennio-dashboard/src/components/: attention_zone.rs  mod.rs  pr_table.rs  session_card.rs  session_list.rs  status_bar.rs
crates/ennio-db/: Cargo.toml
crates/ennio-db/src/: error.rs  lib.rs  migrations.rs  pool.rs
crates/ennio-db/src/repo/: events.rs  metrics.rs  mod.rs  projects.rs  sessions.rs
crates/ennio-ledger/: Cargo.toml
crates/ennio-ledger/src/: error.rs  ledger.rs  lib.rs  memory.rs  types.rs
crates/ennio-ml/: Cargo.toml
crates/ennio-ml/src/: anomaly.rs  cost.rs  error.rs  lib.rs  predictor.rs
crates/ennio-nats/: Cargo.toml
crates/ennio-nats/src/: client.rs  error.rs  lib.rs  publisher.rs  topics.rs
crates/ennio-node/: Cargo.toml
crates/ennio-node/src/: auth.rs  main.rs  server.rs  service.rs
crates/ennio-observe/: Cargo.toml
crates/ennio-observe/src/: lib.rs  logging.rs  prometheus.rs  telemetry.rs
crates/ennio-plugins/: Cargo.toml
crates/ennio-plugins/proptest-regressions/agent/: claude_code.txt
crates/ennio-plugins/src/: lib.rs
crates/ennio-plugins/src/agent/: aider.rs  claude_code.rs  codex.rs  mod.rs  opencode.rs  stub.rs
crates/ennio-plugins/src/notifier/: desktop.rs  mod.rs  slack.rs  webhook.rs
crates/ennio-plugins/src/runtime/: mod.rs  process.rs  ssh.rs  tmux.rs
crates/ennio-plugins/src/scm/: github.rs  mod.rs
crates/ennio-plugins/src/terminal/: mod.rs  web.rs
crates/ennio-plugins/src/tracker/: github.rs  linear.rs  mod.rs
crates/ennio-plugins/src/workspace/: clone_ws.rs  mod.rs  worktree.rs
crates/ennio-proto/: Cargo.toml  build.rs
crates/ennio-proto/proptest-regressions/: convert.txt
crates/ennio-proto/proto/: ennio_node.proto
crates/ennio-proto/src/: convert.rs  lib.rs
crates/ennio-services/: Cargo.toml
crates/ennio-services/src/: config_loader.rs  event_bus.rs  events.rs  lib.rs  lifecycle_manager.rs  registry.rs  session_manager.rs
crates/ennio-ssh/: Cargo.toml
crates/ennio-ssh/proptest-regressions/: config.txt
crates/ennio-ssh/src/: client.rs  config.rs  error.rs  lib.rs  node.rs  runtime.rs  shell.rs  workspace.rs
crates/ennio-ssh/src/strategy/: mod.rs  remote_control.rs  tmate.rs  tmux.rs
crates/ennio-tui/: Cargo.toml
crates/ennio-tui/src/: app.rs  error.rs  events.rs  lib.rs  runner.rs  ui.rs
crates/ennio-web/: Cargo.toml
crates/ennio-web/src/: auth.rs  handlers.rs  lib.rs  response.rs  router.rs  state.rs
docs/: book.toml
docs/book/: 404.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/book/api/: cli.html  grpc.html  rest.html
docs/book/getting-started/: configuration.html  installation.html  quickstart.html
docs/book/guides/: cost-tracking.html  notifications.html  plugins.html  reactions.html  remote-execution.html  session-lifecycle.html
docs/book/reference/: architecture.html  configuration.html  crate-map.html  database.html  events.html
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: cli.md  grpc.md  rest.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/guides/: cost-tracking.md  notifications.md  plugins.md  reactions.md  remote-execution.md  session-lifecycle.md
docs/src/reference/: architecture.md  configuration.md  crate-map.md  database.md  events.md
