[package]
name = "ennio-dashboard"
description = "Dioxus WASM dashboard frontend for Ennio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
