[package]
name = "ennio-ledger"
description = "TigerBeetle financial tracking and budget management for Ennio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
ennio-core.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tokio-test.workspace = true
pretty_assertions.workspace = true
