[package]
name = "ennio-ml"
description = "ML trait interfaces for Ennio (burn/ort as optional deps)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ennio-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
