[package]
name = "ennio-nats"
description = "NATS messaging layer for Ennio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ennio-core.workspace = true
async-nats.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tokio-test.workspace = true
