[package]
name = "ennio-node"
description = "Remote node daemon for Ennio agent orchestration via gRPC"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ennio-node"
path = "src/main.rs"

[dependencies]
ennio-core.workspace = true
ennio-proto.workspace = true
async-trait.workspace = true
clap.workspace = true
prost.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tokio-test.workspace = true
