[package]
name = "ennio-observe"
description = "Tracing, OpenTelemetry, and Prometheus observability for Ennio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ennio-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
thiserror.workspace = true
tokio.workspace = true
