[package]
name = "ennio-plugins"
description = "Plugin implementations for all 8 slots"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ennio-core.workspace = true
ennio-ssh.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tokio-test.workspace = true
wiremock.workspace = true
tempfile.workspace = true
