[package]
name = "ennio-proto"
description = "gRPC protocol definitions for Ennio node communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ennio-core.workspace = true
tonic.workspace = true
prost.workspace = true
serde_json.workspace = true

[features]
default = ["protobuf-src"]

[build-dependencies]
tonic-build.workspace = true
protobuf-src = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
