[package]
name = "ennio-services"
description = "Core services: SessionManager, LifecycleManager, PluginRegistry, EventBus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ennio-core.workspace = true
ennio-db.workspace = true
ennio-nats.workspace = true
ennio-plugins.workspace = true
ennio-proto.workspace = true
ennio-ssh.workspace = true
async-trait.workspace = true
tonic.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tempfile.workspace = true
tokio-test.workspace = true
