[package]
name = "ennio-ssh"
description = "SSH client and remote execution strategies for Ennio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ennio-core.workspace = true
ennio-proto.workspace = true
async-trait.workspace = true
tonic.workspace = true
russh.workspace = true
russh-keys.workspace = true
secrecy.workspace = true
chrono.workspace = true
getrandom.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
shell-escape.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
